@@ -1,4 +1,5 @@
 0.06
+ - Fix examples/ex3.pl example.
  - Move image in doc to github. MetaCPAN doesn't view local images.
 
 0.05 2014-12-21T17:35:53+01:00
